--- a/src/app/components/dRooms/dRooms.component.html
+++ b/src/app/components/dRooms/dRooms.component.html
@@ -10,7 +10,7 @@
                 <div class="form-row">
                     <div class="col-md-4 mb-3">
                         <label for="validationCustom01">Nombre del comedor</label>
-                        <input type="text" class="form-control" formControlName="dRoom" class="form-control" #dRoom id="validationCustom01" placeholder="Lyria Fernanda"
+                        <input type="text" class="form-control" formControlName="dRoom" class="form-control" #dRoom id="validationCustom01" placeholder="Comedor Industrial"
                             required>
                     </div>
                     <div class="col-md-7 mb-3">
