--- a/src/app/components/providers/providers.component.html
+++ b/src/app/components/providers/providers.component.html
@@ -10,8 +10,8 @@
                 <div class="form-row">
                         <div class="col-md-12 mb-3">
                                 <label for="validationCustom01">Nombre del proveedor</label>
-                                <input type="text" class="form-control" name="prov_name" class="form-control" formControlName="prov_name"
-                                    #contact_first_name id="validationCustom01" placeholder="Granjas de don Pepe" required>
+                                <input type="text" class="form-control" class="form-control" formControlName="name"
+                                    #name id="validationCustom01" placeholder="Granjas de don Pepe" required>
                         </div>
                 </div>
                 <div class="form-row">
