--- a/src/app/components/unit/edit-unit/editUnit.component.html
+++ b/src/app/components/unit/edit-unit/editUnit.component.html
@@ -5,7 +5,7 @@
               <div class="main-box no-header clearfix">
                   <div class="main-box-body clearfix">
                     <div class=" col-md-12 mb-3">
-                        <p>Actualizar usuario</p>
+                        <p>Actualizar unidad</p>
                         <form class="needs-validation" [formGroup]="reactiveForm" (ngSubmit)="updateUnit()">
                             <div class="form-row">
                               <div class="col-md-4 mb-3">
