Avances de salidas CREATE and READ

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -86,7 +86,7 @@
       <div id="collapseRequests" class="collapse" aria-labelledby="collapseRequests" data-parent="#accordionSidebar" *ngIf="rest.loggedIn()">
         <div class="bg-white py-2 collapse-inner rounded">
           <h6 class="collapse-header">Salidas</h6>
-          <a class="collapse-item" *ngIf="rest.loggedIn()" [routerLinkActive]="['active']" [routerLink]="['/units']">Salidas</a>
+          <a class="collapse-item" *ngIf="rest.loggedIn()" [routerLinkActive]="['active']" [routerLink]="['/deliveries']">Salidas</a>
         </div>
       </div>
     </li>
