--- a/src/app/components/delivery/viewList/deliveryList.component.html
+++ b/src/app/components/delivery/viewList/deliveryList.component.html
@@ -35,7 +35,7 @@
                         <td>{{dl.status}}</td>
                         
                         <td style="width: 20%;">
-                            <a routerLink="" class="table-link">
+                            <a routerLink="/deliveries/edit/{{dl._id}}" class="table-link">
                                 <span class="fa-stack">
                                     <i class="fa fa-square fa-stack-2x"></i>
                                     <i class="fa fa-pencil fa-stack-1x fa-inverse"></i>
