Se termina la edicion de las salidas

--- a/src/app/components/delivery/edit/deliveryEdit.component.html
+++ b/src/app/components/delivery/edit/deliveryEdit.component.html
@@ -1,6 +1,6 @@
 <div class="card shadow mb-4">
     <div class="card-header py-3">
-        <h6 class="m-0 font-weight-bold text-primary">Nueva salida</h6>
+        <h6 class="m-0 font-weight-bold text-primary">Editar salida</h6>
     </div>
     <div class="card-body">
         <div class="form-row mb-2">
@@ -11,7 +11,7 @@
                     <option > Elegir...</option>
                     <option *ngFor="let bs of busses">{{bs.user.nick_name}}</option>
                 </select>
-                <button type="button" id="searcherTrigger" (click)="setInfo()"></button>
+                <button hidden type="button" id="searcherTrigger" (click)="setInfo()"></button>
             </div>
             <div class="col-md-3 mb-3"></div>
             <div class="col-md-3 mb-3 pull-right">
@@ -54,10 +54,10 @@
                                         <tbody>
                                             <ng-container *ngFor="let prod of req.products, let k = index">
                                                 <tr *ngIf="!prod.sTs">
-                                                    <td>{{prod.name}}</td>
-                                                    <td>{{prod.quantity}}</td>
-                                                    <td>{{prod.unit}}</td>
-                                                    <td>{{prod.provider}}</td>
+                                                    <td id="name{{j}}{{k}}">{{prod.name}}</td>
+                                                    <td id="qtty{{j}}{{k}}">{{prod.quantity}}</td>
+                                                    <td id="unit{{j}}{{k}}">{{prod.unit}}</td>
+                                                    <td id="prov{{j}}{{k}}">{{prod.provider}}</td>
                                                     <td>
                                                         <button class="btn btn-primary float-right mb-3" type="reset" (click)="addElement(j,k)" id="add{{j}}{{k}}">Agregar</button>
                                                         <button class="btn btn-danger float-right mb-3" type="reset" (click)="deleteElement(j,k) " id="del{{j}}{{k}}" hidden>Remover</button>
@@ -87,7 +87,7 @@
             <span class="icon text-white-50">
                 <i class="fas fa-plus"></i>
             </span>
-            <span class="text" style="color:white">Crear salida</span>
+            <span class="text" style="color:white">Editar salida</span>
         </button>
 
         <a [routerLink]="['/deliveries']" class="btn btn-danger btn-icon-split float-right mb-3">
